fixing gap issue between links and dropdowns in IE toolbar.
Reviewed-on: https://code.drupalcommerce.org/711
Tested-by: JenkinsCG <jenkins@drupalcommerce.org>

--- a/modules/commerce_kickstart/toolbar_megamenu/toolbar_megamenu_ie.css
+++ b/modules/commerce_kickstart/toolbar_megamenu/toolbar_megamenu_ie.css
@@ -27,8 +27,17 @@
   position: relative;
   z-index: 1;
 }
+body.toolbar #toolbar ul.menu-depth-2 a {
+  margin-bottom: 15px;
+}
+body.toolbar #toolbar ul.menu-depth-2 li {
+  cursor: pointer;
+}
 body.toolbar #toolbar ul.menu-depth-2 .wrapper-depth-3 {
-  margin-top: -15px;
+  margin-top: 0px;
+}
+body.toolbar #toolbar ul.menu-depth-2 .wrapper-depth-3 a {
+  margin-bottom: 0;
 }
 body.toolbar #toolbar .wrapper-depth-3 li {
   list-style-image: none !important;
